--- a/survey-box/src/App.css
+++ b/survey-box/src/App.css
@@ -1,6 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&display=swap");
+
 .App {
   background: #e5e5e5;
   /* max-width: 1440px; */
-  display: flex;
-  justify-content: end;
+  /* display: flex-end;
+  justify-content: end; */
+  overflow: hidden;
+  font-family: "Nunito";
 }
