--- a/survey-box/src/components/left-survey-timeline/SurveyTimeline.css
+++ b/survey-box/src/components/left-survey-timeline/SurveyTimeline.css
@@ -3,5 +3,48 @@
   height: 100vh;
   background: #ffffff;
   float: left;
-  /* position: fixed; */
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.survey-name {
+  color: #222831;
+  font-size: 21px;
+  font-weight: 400;
+  border-bottom: 3px solid #e5e5e5;
+  padding: 25px;
+}
+
+.page-example {
+  display: flex;
+  padding: 35px 20px;
+}
+
+.page-number {
+  background: #d9a04f;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  margin-top: 40px;
+}
+
+.page-preview {
+}
+
+.preview {
+  width: 164px;
+  height: 133px;
+  border: 4px solid #597b77;
+  border-radius: 10px;
+  background: #f4f4f4;
+  margin-bottom: 6px;
+}
+
+.page-type {
+  font-size: 16px;
 }
