--- a/survey-box/src/components/middle/bottom-page-options/OptionalPages.css
+++ b/survey-box/src/components/middle/bottom-page-options/OptionalPages.css
@@ -1,6 +1,10 @@
 .optional-pages-container {
-  width: 60px;
-  height: 60px;
+  padding-bottom: 40px;
+}
+
+.circ-btn {
+  width: 50px;
+  height: 50px;
   background: #d9a04f;
   border-radius: 50%;
   display: flex;
@@ -10,4 +14,5 @@
   font-size: 50px;
   padding: 0;
   line-height: 0;
+  color: #f9f9f9;
 }
