full ui *design (only)* implementation!

--- a/survey-box/src/components/left-survey-timeline/SurveyTimeline.css
+++ b/survey-box/src/components/left-survey-timeline/SurveyTimeline.css
@@ -3,9 +3,10 @@
   height: 100vh;
   background: #ffffff;
   float: left;
-  position: fixed;
+  /*new!*/
+  /* position: fixed; 
   top: 0;
-  left: 0;
+  left: 0; */
 }
 
 .survey-name {
