--- a/survey-box/src/App.css
+++ b/survey-box/src/App.css
@@ -2,9 +2,31 @@
 
 .App {
   background: #e5e5e5;
-  /* max-width: 1440px; */
-  /* display: flex-end;
-  justify-content: end; */
   overflow: hidden;
   font-family: "Nunito";
+  /*new!*/
+  display: flex;
+  justify-content: space-between;
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+  height: 14px;
+}
+::-webkit-scrollbar-thumb {
+  height: 6px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  -webkit-border-radius: 14px;
+  background-color: rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05),
+    inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+}
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
+}
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
