--- a/survey-box/src/components/middle/main-survey-window/PageViewer.css
+++ b/survey-box/src/components/middle/main-survey-window/PageViewer.css
@@ -1,7 +1,11 @@
-.page-viewer-container {
+.preview-window {
   width: 700px;
   height: 500px;
   background: white;
   margin: 37px auto;
   border-radius: 7px;
+}
+
+.page-viewer-container {
+  padding: 0 20px;
 }
