--- a/survey-box/src/components/middle/main-window/MainWindow.css
+++ b/survey-box/src/components/middle/main-window/MainWindow.css
@@ -1,6 +1,11 @@
 .main-window-container {
   height: 100vh;
   /* width: 100vw; */
-  padding: 0 270px;
+  /* padding: 0 270px;
+  overflow-y: overlay; */
+
+  /*new!*/
   overflow-y: overlay;
+  overflow-x: overlay;
+  /* padding: 0 30px; */
 }
