--- a/survey-box/src/components/middle/top-header-features/SiteHeader.css
+++ b/survey-box/src/components/middle/top-header-features/SiteHeader.css
@@ -3,9 +3,9 @@
 .header-container {
   display: flex;
   justify-content: space-between;
-  padding: 30px;
   width: 700px;
-  margin: 0 auto;
+  margin: 30px auto;
+  padding: 0 20px;
 }
 
 .features {
