start of page addition logic
* implemented the logic using redux:
page button is pressed (in OptionsComponent.tsx)
---> page action is called with the page type (redux)
---> the state (/store) is changed
---> the timeline bar is updated according to the changes (in SurveyTimeline.tsx)

* the ui gets messed up after the addition (shows one next to the other instead of under) - will be fixed next

--- a/survey-box/src/components/left-survey-timeline/SurveyTimeline.scss
+++ b/survey-box/src/components/left-survey-timeline/SurveyTimeline.scss
@@ -34,9 +34,6 @@
   margin-top: 40px;
 }
 
-.page-preview {
-}
-
 .preview {
   width: 164px;
   height: 133px;
@@ -44,8 +41,22 @@
   border-radius: 10px;
   background: #f4f4f4;
   margin-bottom: 6px;
+  position: relative;
 }
 
 .page-type {
   font-size: 16px;
+}
+
+.trash-icon {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.trash-icon:hover {
+  .trash-path {
+    fill: #d9a04f;
+  }
 }
