--- a/survey-box/src/components/left-survey-timeline/SurveyTimeline.scss
+++ b/survey-box/src/components/left-survey-timeline/SurveyTimeline.scss
@@ -1,12 +1,10 @@
 .timeline-container {
-  width: 270px;
+  width: 440px;
   height: 100vh;
   background: #ffffff;
   float: left;
-  /*new!*/
-  /* position: fixed; 
-  top: 0;
-  left: 0; */
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .survey-name {
@@ -18,7 +16,7 @@
 }
 
 .page-example {
-  display: flex;
+  display: inline-block;
   padding: 35px 20px;
 }
 
@@ -37,11 +35,15 @@
 .preview {
   width: 164px;
   height: 133px;
-  border: 4px solid #597b77;
   border-radius: 10px;
   background: #f4f4f4;
   margin-bottom: 6px;
   position: relative;
+  cursor: pointer;
+}
+
+.curr-page {
+  border: 4px solid #597b77;
 }
 
 .page-type {
@@ -59,4 +61,9 @@
   .trash-path {
     fill: #d9a04f;
   }
+}
+
+.single-page-container {
+  display: flex;
+  margin-bottom: 20px;
 }
