--- a/survey-box/src/components/left-survey-timeline/SurveyTimeline.scss
+++ b/survey-box/src/components/left-survey-timeline/SurveyTimeline.scss
@@ -1,10 +1,11 @@
 .timeline-container {
-  width: 440px;
+  width: 270px;
+  min-width: 270px;
   height: 100vh;
   background: #ffffff;
   float: left;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 .survey-name {
