full page background implementation
* I used react-color library for the color picker.

* I used this custom react hook to eacape out of the color picker when clicking outside that container. link to codepen: https://codesandbox.io/s/989y0758np?file=/src/index.js:1089-1098
link to stack overflow question (4th answer): https://stackoverflow.com/questions/32553158/detect-click-outside-react-component?page=1&tab=votes#tab-top

* Everything is updating in the store dynamically and shows in the preview window

--- a/survey-box/src/components/right-page-edit/PageEditor.css
+++ b/survey-box/src/components/right-page-edit/PageEditor.css
@@ -3,10 +3,7 @@
   height: 100vh;
   background: #ffffff;
   float: right;
-  /*new!*/
-  /* position: fixed;
-  top: 0;
-  right: 0; */
+  min-width: 270px;
 }
 
 .border-bottom {
@@ -38,10 +35,10 @@
   content: "";
   width: 17px;
   height: 17px;
-  background: white;
   border-radius: 50%;
   border: 1px solid #222831;
   margin-right: 30px;
+  cursor: pointer;
 }
 
 .feature-text {
@@ -84,4 +81,18 @@
 
 .answer-text-field {
   width: 150px;
+}
+
+.bg-color-picker {
+  z-index: 1;
+  position: absolute;
+  top: 25px;
+}
+
+.background {
+  position: relative;
+}
+
+.sample:focus {
+  outline: none;
 }
