full button functionality
1. made a background color picker component- that way, every component that uses a color picker will make use of this component with the props relevant to them.
this component is responsible to dispatching the relevant action (using the prop it got from the parent)

2. all changes are being displayed in the preview panel

--- a/survey-box/src/components/right-page-edit/PageEditor.css
+++ b/survey-box/src/components/right-page-edit/PageEditor.css
@@ -4,6 +4,8 @@
   background: #ffffff;
   float: right;
   min-width: 270px;
+  overflow-y: overlay;
+  overflow-x: auto;
 }
 
 .border-bottom {
@@ -87,9 +89,10 @@
   z-index: 1;
   position: absolute;
   top: 25px;
+  left: 0;
 }
 
-.background {
+.color-picker-row {
   position: relative;
 }
 
