--- a/survey-box/src/components/middle/main-survey-window/PageViewer.css
+++ b/survey-box/src/components/middle/main-survey-window/PageViewer.css
@@ -4,8 +4,21 @@
   background: white;
   margin: 37px auto;
   border-radius: 7px;
+  position: relative;
 }
 
 .page-viewer-container {
   padding: 0 20px;
+}
+
+.next-button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 40px;
+  padding: 10px 45px;
+  border-radius: 30px;
+  border: none;
+  letter-spacing: 1px;
+  font-family: "Nunito";
 }
