full statement pages functionality +small refactoring
1. finished header and sub header functionality
2. made a new interface- INextClick which all pages implement except GoodBye page, which logicaly doesn't have a next page.
i moved the next button properties from the IPage interface to the new interface and added a condition in the edit bar component so the next button edit options will be displayed when relevant.

--- a/survey-box/src/components/middle/main-survey-window/PageViewer.scss
+++ b/survey-box/src/components/middle/main-survey-window/PageViewer.scss
@@ -25,4 +25,14 @@
   .content {
     padding: 4em 6em;
   }
+
+  .header {
+    font-weight: 700;
+    margin-bottom: 0.5em;
+  }
+
+  .sub-header {
+    letter-spacing: 0.5px;
+    font-weight: 300;
+  }
 }
