answers preview almost done
1. created a new component to differenciate the question preview types (radio button/ check box etc.)

2. preview the dynamic edit is working

only thing left to do in this part (2/3) is finish the css for the answers preview

--- a/survey-box/src/components/right-page-edit/question-components/QuestionTextComponent.scss
+++ b/survey-box/src/components/right-page-edit/question-components/QuestionTextComponent.scss
@@ -4,4 +4,29 @@
   .answer-row {
     display: flex;
   }
+
+  .answer-row:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+.add-answer-text:focus {
+  outline: none;
+}
+
+.add-answer-text {
+  width: 22px;
+  height: 22px;
+  background: #d9a04f;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  font-size: 20px;
+  padding: 0;
+  line-height: 0;
+  color: #f9f9f9;
+  border: none;
+  cursor: pointer;
 }
