full working answer design edits!
finish the css and did some small refactoring in the answers preview grid.
Also added a delete button to each answer (working as well).
part 2 is pretty much done!

--- a/survey-box/src/components/middle/main-survey-window/PageViewer.scss
+++ b/survey-box/src/components/middle/main-survey-window/PageViewer.scss
@@ -15,11 +15,13 @@
     bottom: 0;
     right: 0;
     margin: 40px;
-    padding: 10px 45px;
+    padding: 10px;
     border-radius: 30px;
     border: none;
     letter-spacing: 1px;
     font-family: "Nunito";
+    width: 140px;
+    height: 47px;
   }
 
   .content {
